# CowChain

./: .env.local  .gitignore  Anchor.toml  README.md  auth.ts  middleware.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/analytics/: page.tsx
app/connect-wallet/: page.tsx
app/contact/: page.tsx
app/documentation/: page.tsx
app/faq/: page.tsx
app/farmer/: page.tsx
app/login/: page.tsx
app/marketplace/: page.tsx
app/portfolio/: page.tsx
app/privacy-policy/: page.tsx
app/profile/: page.tsx
app/signup/: page.tsx
app/terms-of-service/: page.tsx
components/: dashboard-buy-panel.tsx  demo-state-provider.tsx  footer.tsx  herd-card.tsx  i18n-provider.tsx  language-switcher.tsx  navbar.tsx  stat-card.tsx
components/icons/: cow-icon.tsx
components/ui/: button.tsx
hooks/: use-auth-guard.ts
lib/: auth-utils.ts  cowchain-purchase.ts  cowchain-sell.ts  demo-data.ts  i18n.ts  mailer.ts  mock-data.ts  nav-system.ts  phantom-spl-token.ts  prisma.ts  solana-contract.ts  spl-token-admin.ts  token-metadata.ts  utils.ts
locales/en/: translation.json
locales/kk/: translation.json
locales/ru/: translation.json
prisma/: dev.db  schema.prisma
prisma/prisma/: dev.db
programs/cowfi-herd-pool/: Cargo.toml
programs/cowfi-herd-pool/src/: lib.rs
scripts/: init-cowchain-devnet.mjs
scripts/translations/: analytics_update.js  fix_analytics.js  portfolio_translate.js  portfolio_update.js  translate_farmer.js  (+4 more)
types/: next-auth.d.ts
(+38 files in other folders)
